# bucket-api

./: Cargo.toml  build.rs
proto/: account.proto  auth.proto  backend_api.proto  bucket.proto  bucket_collection.proto  bucket_permission.proto  cluster.proto  filesystem.proto  image.proto  metrics.proto  model.proto  notification.proto  search.proto  share.proto  streaming.proto  sync.proto  webhook.proto  webhook_event.proto
proto/account/v1/: access_token.proto  account.proto  account_decentralized_signing.proto  account_service.proto  auth.proto  login.proto  mfa.proto  registration.proto
proto/common/v1/: account.proto  storage.proto  types.proto
proto/engine/v1/: engine.proto  engine_service.proto
proto/region/v1/: cluster.proto  region_service.proto
proto/search/v1/: search.proto  search_service.proto
proto/share/v1/: share.proto  share_link.proto  share_service.proto
proto/storage/v1/: bucket.proto  bucket_collection.proto  filesystem.proto  storage_service.proto
proto/transcoding/v1/: compresion.proto  image.proto  transcoding_service.proto  video.proto
proto/webhook/v1/: webhook.proto  webhook_event.proto  webhook_service.proto
src/: lib.rs
