[package]
name = "bucket-api"
version = "0.0.0"
rust-version = "1.80"
edition = "2021"

[features]
default = ["server-api", "client-api"]
client-api = []
server-api = []

[dependencies]
tonic = {version = "*", features = ["prost", "channel"], default-features = false}
tonic-health = {version = "*", default-features = false, features = []}
tonic-web = {version = "*", default-features = false, features = []}
prost = {version = "*"}
prost-types = {version = "*"}
[build-dependencies]
prost = {version = "*"}
tonic-build = {version = "*"}


