[package]
name = "bucket-api"
version = "0.0.0"
rust-version = "1.80"
edition = "2021"

[features]
default = ["server-api", "client-api"]
client-api = []
server-api = []

[dependencies]
tonic-health = {version = "*", default-features = false, features = []}
tonic-web = {version = "*", default-features = false, features = []}
prost = {version = "*"}
prost-types = {version = "*"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client = { version = "*", features = []}
tonic = { version = "0.12.1", default-features = false, features = [
    "prost",
    "codegen",
] }

wasm-bindgen = "*"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = {version = "*", features = ["prost", "codegen", "transport"], default-features = false}
tokio = { version = "*" , features = ["rt-multi-thread", "macros"]}
[build-dependencies]
prost = {version = "*"}
tonic-build = {version = "*", default-features = false, features = ["prost"]}


